src/objects/GVS_PicklistValueTranslation__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GVS_PicklistValue__c</fullName>
        <label>Picklist Value</label>
        <referenceTo>GVS_PicklistValue__c</referenceTo>
        <relationshipLabel>Picklist Value Translations</relationshipLabel>
        <relationshipName>PicklistValueTranslations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>Language Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>FR</label>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translation__c</fullName>
        <label>Translation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GVS - Picklist Value Translation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GVS_PVT-{000000000}</displayFormat>
        <label>Picklist Value Translation Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GVS - Picklist Value Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>